--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "google-map-react": "^2.2.1",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.5",
+    "google-map-react": "^2.2.1",
     "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
