--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
