--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.7.2",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-date-picker": "^11.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
